--- a/Strings/AppResources.fr.resx
+++ b/Strings/AppResources.fr.resx
@@ -3262,4 +3262,7 @@ Quittez le vol actuel et réessayez.</value>
   <data name="WorldSelectionControl.NoWorldsAvailable" xml:space="preserve">
     <value>Aucun monde disponible</value>
   </data>
+  <data name="PauseControl.World.Replay" xml:space="preserve">
+    <value>Replay</value>
+  </data>
 </root>
