--- a/Strings/AppResources.resx
+++ b/Strings/AppResources.resx
@@ -4229,4 +4229,8 @@ Exit curent flight and try again.</comment>
     <value>No worlds available</value>
     <comment>No worlds available</comment>
   </data>
+  <data name="PauseControl.World.Replay" xml:space="preserve">
+    <value>Replay</value>
+    <comment>Replay</comment>
+  </data>
 </root>
