--- a/Strings/AppResources.fr.resx
+++ b/Strings/AppResources.fr.resx
@@ -3265,4 +3265,7 @@ Quittez le vol actuel et réessayez.</value>
   <data name="PauseControl.World.Replay" xml:space="preserve">
     <value>Replay</value>
   </data>
+  <data name="AircraftPage.ExpiresIn" xml:space="preserve">
+    <value>Expire dans</value>
+  </data>
 </root>
